--- a/options.html
+++ b/options.html
@@ -14,6 +14,17 @@
     </header>
 
     <main>
+      <div class="import-export-section">
+        <div class="import-export-header">
+          <h3 id="importExportTitle">配置管理</h3>
+        </div>
+        <div class="import-export-actions">
+          <button id="exportBtn" class="btn btn-export"></button>
+          <button id="importBtn" class="btn btn-import"></button>
+          <input type="file" id="importFileInput" accept=".json" style="display: none;">
+        </div>
+      </div>
+
       <div class="config-section">
         <div class="section-header">
           <h2 id="templatesTitle">URL 跳转模板</h2>
